--- a/index.html
+++ b/index.html
@@ -1,27 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+<meta charset="utf-8">
 <head>
-    <!-- Remote style sheet -->
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    
-    <!-- Local style sheet relative to workspace folder -->
-    <link rel="stylesheet" href="/style.css">
-
-    <!-- Local style sheet relative to this file -->
-    <link rel="stylesheet" href="style.css">
-    
-    <!-- Embedded style sheet -->
-    <style>
-        #content {
-            display: block;
-        }
-
-        .internal {
-            display: block;
-        }
-    </style>
+   <title> My website </title>
 </head>
 
 <body>
