--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
-<head>
-   <title> My website </title>
-</head>
-
-<body>
-    <div class="container external internal" id="content">
-        <div class="row">
-            <div class="col">1 of 2</div>
-            <div class="col">2 of 2</div>
-        </div>
-    </div>
-</body>
-
+    
+    <head>
+        <title>  The Journal of Web Learner | Learning HTML </title>
+           
+    </head>
+    <body>
+        <section>
+             <h2>Quotations in HTML</h2>
+             <blockquote cite="http://csbible.com/about-the-csb/faqs/#faq/may-i-use-the-christian-standard-bible-in-my-writing"> 
+             <p> 
+                Go to the ant, you slacker!  Observe its ways and become wise <br>
+                <a href="https://www.bible.com/bible/1713/PRO.6.CSB"><strong> Proverbs 6:6</strong></a> 
+             </p>
+             </blockquote> 
+        </section>
+    </body>
+ 
 </html>
