--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
     
     <head>
-        <title>  The Journal of Web Learner | Learning HTML </title>
+        <title>  The Journal of a Web Development Learner | Learning HTML </title>
            
     </head>
     <body>
         <section>
-             <h2>Quotations in HTML</h2>
-             <blockquote cite="http://csbible.com/about-the-csb/faqs/#faq/may-i-use-the-christian-standard-bible-in-my-writing"> 
-             <p> 
-                Go to the ant, you slacker!  Observe its ways and become wise <br>
-                <a href="https://www.bible.com/bible/1713/PRO.6.CSB"><strong> Proverbs 6:6</strong></a> 
-             </p>
-             </blockquote> 
+             <h2>Squirrel's days</h2>
+             <div>
+                <h3> Quotations in HTML</h3>
+                <blockquote cite="http://csbible.com/about-the-csb/faqs/#faq/may-i-use-the-christian-standard-bible-in-my-writing"> 
+                <p> 
+                   Go to the ant, you slacker!  Observe its ways and become wise <br>
+                   <a href="https://www.bible.com/bible/1713/PRO.6.CSB"><strong> Proverbs 6:6</strong></a> </p>
+             </blockquote>
+            </div> 
         </section>
     </body>
  
