Update index.html Sections

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
              </blockquote>
             </div> 
         </section>
+        <section> <h2>Learning Platforms </h2></section>
+        <section> <h2>Roadmap to Junior Web Developer </section>
+
     </body>
  
 </html>
