Update index.html with Style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
              <div>
                 <h3> Quotations in HTML</h3>
                 <blockquote cite="http://csbible.com/about-the-csb/faqs/#faq/may-i-use-the-christian-standard-bible-in-my-writing"> 
-                <p> 
+                <p style=" padding: 15px; background: #eee; border-radius: 5px;">  
                    Go to the ant, you slacker!  Observe its ways and become wise <br>
                    <a href="https://www.bible.com/bible/1713/PRO.6.CSB"><strong> Proverbs 6:6</strong></a> </p>
              </blockquote>
