--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Alfredo Lobaina (Al)" />
         <link rel="stylesheet" href="styles.css"> 
         <title>  Professional Portfolio | Alfredo Lobaina </title>
-          
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>  
     </head>
     <body>
         <header class="header">
