--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header class="header">
-            <h1 style="color: var(--hp-bg-bone)">Al</h1>
+            <h1 class="font-bold">Alfredo LOBAINA</h1>
           
           </header>
         <section>
